Adapted authentication views to new business logic of master branch